--- a/package.json
+++ b/package.json
@@ -22,12 +22,22 @@
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/gyroscope": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
+    "@ionic-native/toast": "^4.4.2",
     "@ionic/storage": "2.0.1",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-geolocation": "^3.0.0",
+    "cordova-plugin-gyroscope": "^0.1.4",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-x-toast": "^2.6.0",
     "ionic": "^3.19.0",
     "ionic-angular": "3.8.0",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
@@ -42,7 +52,17 @@
     "plugins": {
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
-    }
+      },
+      "cordova-plugin-gyroscope": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-x-toast": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
